error.txt
cargo :     Checking engine 
v0.1.0 (F:\engine\engine\engine)
At line:1 char:1
+ cargo check 2>&1 | Out-File 
-Encoding utf8 error.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : Not 
   Specified: (    Checking en..  
  .\engine\engine):String) [],    
 RemoteException
    + FullyQualifiedErrorId : Nat 
   iveCommandError
 
error[E0560]: struct 
`PrimitiveRenderer` has no field 
named `window`
   --> 
engine\src\renderer.rs:163:13
    |
163 |             window,
    |             ^^^^^^ 
`PrimitiveRenderer` does not have 
this field
    |
    = note: all struct fields are 
already assigned

For more information about this 
error, try `rustc --explain 
E0560`.
error: could not compile `engine` 
(lib) due to 1 previous error
